# cmsn-data

./: .gitignore  Cargo.toml  Dockerfile  README.md  log.rs
output/dbscan_route/: cluster_summary.csv  session_clusters.csv
output/dbscan_route_nginx/: cluster_summary.csv  session_clusters.csv
output/route/: session_features.csv  session_paths.csv
output/route_nginx/: session_features.csv  session_paths.csv
output/udger/: crawler_stats.csv  datacenter_stats.csv  known_ips.csv  target_url_stats.csv
umami-analyzer/: Cargo.toml  README.md  bot_scenarios.csv  mouse_entropy_analysis.csv  session_features.csv  session_paths.csv
umami-analyzer/output/: session_features.csv  session_paths.csv
umami-analyzer/src/: main.rs
