[package]
name = "umami-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
# SQL 및 텍스트 파싱을 위한 도구
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"           # Hex 문자열을 바이너리로 변환
flate2 = "1.0"        # Gzip 압축 해제
plotters = "0.3"    # 시각화
chrono = "0.4"      # 타임스탬프 처리

# 수학 및 통계 연산 (엔트로피용)
num-traits = "0.2"

# [추후 단계] Rust 내장 딥러닝 프레임워크
# burn = { version = "0.13", features = ["wgpu"] } # 필요할 때 주석 해제

# SQLite 연동을 위한 크레이트 (bundled 옵션을 넣으면 로컬 C 라이브러리 의존성 없이 편하게 빌드됩니다)
rusqlite = { version = "0.31.0", features = ["bundled"] }
# IP 주소 문자열을 정수형이나 대역폭으로 다루기 위한 크레이트
ipnetwork = "0.20.0"

# nginx 파싱용
rayon = "1.10"
glob = "0.3"

# 실시간 진행 프로그래스 바를 위한 크레이트
indicatif = "0.17"
csv = "1.4.0"

# 마르코프
# 구조체를 고속 이진(Binary) 파일로 압축 저장해주는 도구
bincode = "1.3"